# octobench

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cases/dev/rust/minimax_provider_feature/: case.yaml  setup.sh  validate.sh
cases/dev/rust/unexpected_closing_delimiter_fix/: case.yaml  quality.sh  setup.sh  validate.sh
cases/edit/simple/hello/: case.yaml  quality.sh  setup.sh  validate.sh
cases/refactor/complex/rename_func/: case.yaml  quality.sh  setup.sh  validate.sh
cases/refactor/complex/rename_func/fixtures/: app.py  cli.py
cli/: main.py
configs/: efficiency.yaml  models.yaml  run-matrix.yaml  scoring.yaml
configs/octomind/: octomind.toml
docs/: ARCHITECTURE.md  EXTENDING.md  PROVIDER_INTERFACE.md  USAGE.md
judges/: llm_judge.py  prompts.py
providers/: base.py  codex.py  factory.py  octomind.py
runners/: base.py  cli_runner.py
scoring/: aggregate.py
templates/: case.yaml
