[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octobench"
version = "0.1.0"
description = "Benchmark framework for comparing LLM tools + configs"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools]
packages = ["cli", "judges", "runners", "scoring", "providers"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
